--- a/src/main/resources/templates/item/addForm.html
+++ b/src/main/resources/templates/item/addForm.html
@@ -17,14 +17,14 @@
     </div>
     <h4 class="mb-3">상품 입력</h4>
     <form action="item.html" th:action method="post"  enctype="multipart/form-data">
-        <div>
-            <label for="imageFile">미리보기 이미지</label>
-            <input type="file" id="imageFile" name="imageFile" class="form-control" placeholder="파일을 선택하세요">
-        </div>
-        <div>
-            <label for="imageFiles">이미지</label>
-            <input type="file" id="imageFiles" name="imageFiles" class="form-control" multiple="multiple" placeholder="파일들을 선택하세요">
-        </div>
+<!--        <div>-->
+<!--            <label for="imageFile">미리보기 이미지</label>-->
+<!--            <input type="file" id="imageFile" name="imageFile" class="form-control" placeholder="파일을 선택하세요">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <label for="imageFiles">이미지</label>-->
+<!--            <input type="file" id="imageFiles" name="imageFiles" class="form-control" multiple="multiple" placeholder="파일들을 선택하세요">-->
+<!--        </div>-->
         <div>
             <label for="itemName">상품명</label>
             <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요">
