--- a/src/main/resources/templates/item/item.html
+++ b/src/main/resources/templates/item/item.html
@@ -15,11 +15,11 @@
     <div class="py-5 text-center">
         <h2>상품 상세</h2>
     </div>
-    <div>
-        <label for="imageFile">파일</label>
-        <input type="file" id="imageFile" name="imageFile" class="form-control"
-               th:value="${item.}"        >
-    </div>
+<!--    <div>-->
+<!--        <label for="imageFile">파일</label>-->
+<!--        <input type="file" id="imageFile" name="imageFile" class="form-control"-->
+<!--               th:value="${item.}"        >-->
+<!--    </div>-->
     <div>
         <label for="itemId">상품 ID</label>
         <input type="text" id="itemId" name="itemId"  class="form-control"
